@@ -5,6 +5,9 @@ Django MPTT CHANGELOG
 Sun 30th Dec, 2007
 -------------------
 
+* Implemented reparenting when a model instance is transformed into a
+  root node by having its parent removed.
+
 * Added tests for creation, model instance methods and deletion.
 
 * Added a ``get_siblings`` method to model instances.
